# stateql

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md  Taskfile.yml  lefthook.yml  rustfmt.toml
.github/: renovate.json
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: error_presentation.rs  main.rs
crates/cli/tests/: cli_connection_flags_test.rs  cli_shape_test.rs  error_presentation_test.rs  feature_gate_test.rs
crates/core/: Cargo.toml
crates/core/examples/: dialect_template.rs
crates/core/src/: adapter.rs  annotation.rs  config.rs  dialect.rs  diff.rs  error.rs  executor.rs  ir.rs  lib.rs  orchestrator.rs  ordering.rs  plan.rs  renderer.rs  statement.rs
crates/core/src/diff/: compare.rs  compare_remaining.rs  constraint_pairing.rs  cycle.rs  enable_drop.rs  engine.rs  name_resolution.rs  partition.rs  policy.rs  privilege.rs  rename.rs  types.rs  view_rebuild.rs
crates/core/src/ir/: expr.rs  ident.rs  schema_object.rs  types.rs
crates/core/tests/: adapter_sync_contract_test.rs  annotation_attach_test.rs  annotation_extractor_test.rs  bootstrap_boundary_test.rs  circular_fk_test.rs  config_types_test.rs  constraint_pairing_test.rs  ddl_plan_builder_test.rs  dialect_contract_test.rs  diff_core_compare_test.rs  diff_ordering_test.rs  diff_remaining_objects_test.rs  diffop_surface_test.rs  enable_drop_test.rs  equivalence_policy_test.rs  error_layering_boundary_test.rs  error_types_test.rs  error_wrap_test.rs  execution_error_context_test.rs  executor_batchboundary_test.rs  executor_grouping_test.rs  executor_non_transactional_test.rs  expr_ast_test.rs  ir_dialect_pattern_validation_test.rs  ir_foundation_test.rs  orchestrator_apply_dryrun_test.rs  orchestrator_diffconfig_wiring_test.rs  orchestrator_export_roundtrip_test.rs  orchestrator_export_test.rs  partition_diff_test.rs  privilege_diff_test.rs  rename_detection_test.rs  renderer_test.rs  safety_s1_s5_test.rs  safety_s6_s11_test.rs  schema_object_part1_test.rs  schema_object_part2_test.rs  schema_search_path_test.rs  statement_context_test.rs  transaction_raii_test.rs  (+1 more)
crates/core/tests/support/: diffop_fixtures.rs  fake_adapter.rs  fake_dialect.rs  ir_pattern_fixtures.rs  orchestrator_export_fixture.rs
crates/dialect-mssql/: Cargo.toml
crates/dialect-mssql/src/: adapter.rs  equivalence.rs  export_queries.rs  extra_keys.rs  generator.rs  lib.rs  normalize.rs  parser.rs  to_sql.rs
crates/dialect-mssql/tests/: adapter_export_schema_test.rs  dialect_surface_test.rs  equivalence_policy_test.rs  generator_contract_test.rs  identity_and_clustered_test.rs  mssql_generator_test.rs  parser_test.rs
crates/dialect-mysql/: Cargo.toml
crates/dialect-mysql/src/: adapter.rs  equivalence.rs  export_queries.rs  extra_keys.rs  generator.rs  lib.rs  normalize.rs  parser.rs  to_sql.rs
crates/dialect-mysql/tests/: adapter_export_schema_test.rs  auto_increment_ordering_test.rs  change_column_merge_test.rs  column_position_after_test.rs  dialect_surface_test.rs  equivalence_policy_test.rs  generator_contract_test.rs  normalize_lower_case_table_names_test.rs  parser_test.rs  partition_generator_test.rs
crates/dialect-postgres/: Cargo.toml
crates/dialect-postgres/src/: adapter.rs  equivalence.rs  export_queries.rs  extra_keys.rs  generator.rs  lib.rs  normalize.rs  parser.rs  to_sql.rs
crates/dialect-postgres/tests/: adapter_export_schema_test.rs  dialect_surface_test.rs  equivalence_policy_test.rs  generator_contract_test.rs  generator_supported_ops_test.rs  normalize_representation_rules_test.rs  parser_test.rs  yaml_seed_test.rs
crates/dialect-sqlite/: Cargo.toml
crates/dialect-sqlite/src/: adapter.rs  equivalence.rs  export_queries.rs  extra_keys.rs  generator.rs  lib.rs  normalize.rs  parser.rs  to_sql.rs
crates/dialect-sqlite/tests/: adapter_export_schema_test.rs  dialect_surface_test.rs  equivalence_policy_test.rs  generator_contract_test.rs  parser_test.rs  rebuild_generator_test.rs  safety_s10_sqlite_atomicity_test.rs
crates/dialect-sqlite/tests/support/: sqlite_atomicity_fixture.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs  yaml_runner.rs
crates/testkit/tests/: offline_runner_test.rs  online_runner_test.rs  testcase_schema_test.rs  yaml_assertion_manifest_test.rs  yaml_assertion_matrix_test.rs  yaml_flavor_filter_test.rs  yaml_idempotency_matrix_test.rs  yaml_migration_manifest_test.rs  yaml_quote_aware_regression_test.rs
crates/testkit/tests/support/: offline_fake_dialect.rs
docs/: 2026-02-21-dialect-trait-stabilization.md  2026-02-21-equivalence-policy-matrix.md  2026-02-21-error-layering.md  2026-02-21-publish-readiness.md  2026-02-21-yaml-migration-status.md  bootstrap-after-git-init.md  style.md  testing.md
docs/adr/: 0001-canonical-ir.md  0002-diffop-batch-sql-generation.md  0003-source-level-extensibility.md  0004-expression-representation-and-canonicalization.md  0005-yaml-test-reuse.md  0006-explicit-rename-annotations.md  0007-batchboundary-semantics.md  0008-single-connection-adapter.md  0009-single-binary-cli-shape.md  0010-parser-selection-policy.md  0011-synchronous-io.md  0012-minimum-supported-database-versions.md  0013-fail-fast-error-handling.md  0014-schema-search-path.md  0015-equivalence-policy-injection.md  0016-view-rebuild-scope-and-owned-diff-planning.md  README.md
docs/plans/: 2026-02-21-stateql-v1-plan.analysis.md  2026-02-21-stateql-v1-plan.md
ralph-loop/: prd.json  progress.txt  prompt.md  ralph.sh
tests/migration/: assertion-manifest.yml  idempotency-manifest.yml
tests/mssql/assertions/constraints/: 0001-ported.yml
tests/mssql/assertions/indexes/: 0001-ported.yml
tests/mssql/assertions/tables/: 0001-ported.yml
tests/mssql/idempotency/: 0001-ported-basics.yml  0011-quote-aware.yml
tests/mysql/idempotency/: 0001-ported-basics.yml  0011-quote-aware.yml
tests/postgres/idempotency/: 0001-basic-create.yml  0002-add-index.yml  0010-ported-basics.yml  0011-quote-aware.yml
tests/sqlite/idempotency/: 0001-ported-basics.yml  0011-quote-aware.yml
(+13 files in other folders)
