[workspace]
members = [
  "crates/core",
  "crates/testkit",
  "crates/dialect-postgres",
  "crates/dialect-mysql",
  "crates/dialect-sqlite",
  "crates/dialect-mssql",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/shuymn/stateql"
