[workspace]
members = [
  "crates/core",
  "crates/testkit",
  "crates/dialect-postgres",
  "crates/dialect-mysql",
  "crates/dialect-sqlite",
  "crates/dialect-mssql",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/shuymn/stateql"

[workspace.dependencies]
stateql-core = { path = "crates/core" }
stateql-dialect-postgres = { path = "crates/dialect-postgres" }
stateql-dialect-mysql = { path = "crates/dialect-mysql" }
stateql-dialect-sqlite = { path = "crates/dialect-sqlite" }
stateql-dialect-mssql = { path = "crates/dialect-mssql" }
