[package]
name = "stateql-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "stateql"
path = "src/main.rs"

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["dep:stateql-dialect-mysql"]
postgres = ["dep:stateql-dialect-postgres"]
sqlite = ["dep:stateql-dialect-sqlite"]
mssql = ["dep:stateql-dialect-mssql"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
stateql-core.workspace = true
stateql-dialect-postgres = { workspace = true, optional = true }
stateql-dialect-mysql = { workspace = true, optional = true }
stateql-dialect-sqlite = { workspace = true, optional = true }
stateql-dialect-mssql = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
