[package]
name = "stateql-dialect-mssql"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "stateql_dialect_mssql"
path = "src/lib.rs"

[dependencies]
stateql-core = { path = "../core" }
sqlparser = "0.59.0"
futures-util = "0.3.31"
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "tds73"] }
tokio = { version = "1.48.0", features = ["net", "rt", "time"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
