[package]
name = "stateql-dialect-postgres"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "stateql_dialect_postgres"
path = "src/lib.rs"

[dependencies]
postgres = "0.19.12"
pg_query = "6.1.1"
stateql-core = { path = "../core" }
