[package]
name = "stateql-dialect-sqlite"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "stateql_dialect_sqlite"
path = "src/lib.rs"

[dependencies]
stateql-core = { path = "../core" }
sqlparser = "0.61.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
