[package]
name = "stateql-testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "stateql_testkit"
path = "src/lib.rs"

[dependencies]
stateql-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
