[package]
name = "stateql-testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "stateql_testkit"
path = "src/lib.rs"

[dependencies]
stateql-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
stateql-dialect-postgres = { path = "../dialect-postgres" }
stateql-dialect-mysql = { path = "../dialect-mysql" }
stateql-dialect-mssql = { path = "../dialect-mssql" }
stateql-dialect-sqlite = { path = "../dialect-sqlite" }
